# facial-recognition

./: facial_recognition.py  pyproject.toml
.github/workflows/: ci.yml
