[project]
name = "facial-recognition"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.8,<3.14"
authors = [
    {name = "Vincent Bernier",email = "vincent.a.bernier@gmail.com"}
]
license = "MIT"
package = true
dependencies = [
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "dlib (>=19.24.6,<20.0.0)",
    "pyinstaller (>=6.12.0,<7.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"